--- a/src/main/resources/static/styles/home/approaches-container.scss
+++ b/src/main/resources/static/styles/home/approaches-container.scss
@@ -5,4 +5,29 @@
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  margin-top: 15vh;
+
+  #approaches-grid {
+    display: grid;
+    grid-template-columns: 30vw 30vw 30vw;
+    grid-template-rows: 30vw 30vw;
+    grid-gap: 3vw;
+    margin-top: 5vh;
+  }
+
+  .approaches-tile {
+    background: transparentize($accent, 1);
+    border: 1px solid $accent;
+    transition: background 0.5s;
+    border-radius: 1em;
+    aspect-ratio: 1/1;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+  }
+
+
 }
