--- a/src/main/resources/static/styles/home/collaborate-container.scss
+++ b/src/main/resources/static/styles/home/collaborate-container.scss
@@ -1,8 +1,74 @@
 #collaborate-container {
-  width: 100%;
-  height: 100vh;
+  min-width: 80vw;
+  height: auto;
+  margin-top: 15vh;
+  margin-bottom: 10vh;
   display: flex;
   flex-flow: column;
   justify-content: center;
   align-items: center;
+
+  #collaborate-info-container {
+    flex: 1;
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+    gap: 5vw;
+    width: 90%;
+    padding-left: 5%;
+    padding-right: 5%;
+
+    #collaborate-info-text {
+      position: relative;
+      text-align: left;
+      display: flex;
+      height: 40vh;
+      flex-flow: column;
+      justify-content: space-evenly;
+      align-items: center;
+      flex: 1;
+      padding: 1em;
+      border-top: 1px solid $accent;
+      border-bottom: 1px solid $accent;
+      border-image: linear-gradient(to right, $accent 50%, transparent 50%) 100% 1;
+    }
+
+    #collaborate-info-image {
+      flex: 1;
+      aspect-ratio: 1/1;
+      position: relative;
+      padding: 1em;
+      //border-right: 1px solid $accent;
+      border-top: 1px solid $accent;
+      border-bottom: 1px solid $accent;
+      border-image: linear-gradient(to left, $accent 50%, transparent 50%) 100% 1;
+      height: 40vh;
+      #collaborate-image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    #collaborate-info-image::after {
+      width: 1px;
+      height: 100%;
+      background: $accent;
+      content: "";
+      display: block;
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    #collaborate-info-text::after {
+      width: 1px;
+      height: 100%;
+      background: $accent;
+      content: "";
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+  }
 }
