--- a/src/main/resources/static/styles/home/top-ratings-display.scss
+++ b/src/main/resources/static/styles/home/top-ratings-display.scss
@@ -5,6 +5,7 @@
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  margin-top: 5vh;
   h1 {
     padding-top: 5vh;
     padding-bottom: 5vh;
