--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -132,7 +132,7 @@ Requisite content:
         <!-- Promote creating an account and explain the benefits -->
         <h1>Join Us</h1>
         <p>An account allows you to save your billing information for convenience while ordering, leave reviews on items you liked or disliked, and even <strong>earn rewards!</strong></p>
-        <button>Create Account</button>
+        <a href="/account"><button>Create Account</button></a>
     </div>
 
 
