--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -550,8 +550,8 @@ body {
 }
 #site-content #approaches-container #approaches-grid {
   display: grid;
-  grid-template-columns: 30vw 30vw 30vw;
-  grid-template-rows: 30vw 30vw;
+  grid-template-columns: 20vw 20vw 20vw;
+  grid-template-rows: 20vw 20vw;
   grid-gap: 3vw;
   margin-top: 5vh;
 }
@@ -567,6 +567,10 @@ body {
   align-items: center;
   width: 100%;
   text-align: center;
+  word-wrap: break-word;
+}
+#site-content #approaches-container .approaches-tile .approaches-tile-heading {
+  font-size: 2em;
 }
 #site-content #collaborate-container {
   min-width: 80vw;
@@ -616,7 +620,7 @@ body {
 #site-content #collaborate-container #collaborate-info-container #collaborate-info-image #collaborate-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 #site-content #collaborate-container #collaborate-info-container #collaborate-info-image::after {
   width: 1px;
