--- a/src/main/resources/static/styles/home/collaborate-container.scss
+++ b/src/main/resources/static/styles/home/collaborate-container.scss
@@ -47,7 +47,7 @@
       #collaborate-image {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
       }
     }
     #collaborate-info-image::after {
