--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -616,9 +616,11 @@ body {
   border-bottom: 1px solid #00B837;
   border-image: linear-gradient(to left, #00B837 50%, transparent 50%) 100% 1;
   height: 40vh;
+  display: flex;
+  flex-flow: column;
+  align-items: end;
 }
 #site-content #collaborate-container #collaborate-info-container #collaborate-info-image #collaborate-image {
-  width: 100%;
   height: 100%;
   object-fit: contain;
 }
