--- a/src/main/resources/static/styles/home/collaborate-container.scss
+++ b/src/main/resources/static/styles/home/collaborate-container.scss
@@ -44,8 +44,10 @@
       border-bottom: 1px solid $accent;
       border-image: linear-gradient(to left, $accent 50%, transparent 50%) 100% 1;
       height: 40vh;
+      display: flex;
+      flex-flow: column;
+      align-items: end;
       #collaborate-image {
-        width: 100%;
         height: 100%;
         object-fit: contain;
       }
