--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -146,33 +146,33 @@ Requisite content:
         <div id="approaches-grid">
 
             <div class="approaches-tile" data-approaches-tile-selected="false" onclick="">
-                <h3 class="approaches-tile-heading">Fast Food, Made Better</h3>
-                <p class="approaches-tile-content" style="display: none;">Lorem ipsum dolor sit amet.</p>
+                <h3 class="approaches-tile-heading">Fast Food, Done Right</h3>
+                <p class="approaches-tile-content" style="display: none;">Our business is modeled after providing quick and convenient food for our customers. Unlike fast food, we strive to maintain quality and excellence in all we do.</p>
             </div>
 
             <div class="approaches-tile" data-approaches-tile-selected="false" onclick="">
                 <h3 class="approaches-tile-heading">Always Convenient</h3>
-                <p class="approaches-tile-content" style="display: none;">Lorem ipsum dolor sit amet.</p>
+                <p class="approaches-tile-content" style="display: none;">We understand that reducing barriers to healthy eating is vital, so keeping the entire process smooth, quick, and frictionless for our customers is a core facet of our strategy.</p>
             </div>
 
             <div class="approaches-tile" data-approaches-tile-selected="false" onclick="">
                 <h3 class="approaches-tile-heading">Healthy First</h3>
-                <p class="approaches-tile-content" style="display: none;">Lorem ipsum dolor sit amet.</p>
+                <p class="approaches-tile-content" style="display: none;">Our core mission is to bring healthy food to the masses. As such, our entire menu is vegetarian friendly, balancing nutrition with cost and convenience — for us and our customers.</p>
             </div>
 
             <div class="approaches-tile" data-approaches-tile-selected="false" onclick="">
                 <h3 class="approaches-tile-heading">Farm Partnership</h3>
-                <p class="approaches-tile-content" style="display: none;">Lorem ipsum dolor sit amet.</p>
+                <p class="approaches-tile-content" style="display: none;">All of our food is sourced from local farms, cutting out the middle man. This allows us to not only decrease the cost of our menu, but also give back to the community that brought us to where we are today.</p>
             </div>
 
             <div class="approaches-tile" data-approaches-tile-selected="false" onclick="">
                 <h3 class="approaches-tile-heading">Friendly Packaging</h3>
-                <p class="approaches-tile-content" style="display: none;">Lorem ipsum dolor sit amet.</p>
+                <p class="approaches-tile-content" style="display: none;">We strive to minimize packaging used for both delivery, drive through, and dine in orders. What little we do use are made from recyclable materials, such as paper or cardboard.</p>
             </div>
 
             <div class="approaches-tile" data-approaches-tile-selected="false" onclick="">
                 <h3 class="approaches-tile-heading">Environmental Sustainability</h3>
-                <p class="approaches-tile-content" style="display: none;">Lorem ipsum dolor sit amet.</p>
+                <p class="approaches-tile-content" style="display: none;">We value preserving the health of the environment — if it collapses, we do as well — so we strive to do what we can to preserve it. Our locations all rely on renewable energy sources in varying ways, we invest in carbon capture systems, and even donate all excess food to local food banks!</p>
             </div>
 
         </div>
@@ -211,6 +211,7 @@ Requisite content:
 
 <div id="footer">
     <!-- TODO: Add footer -->
+    <p>&copy; 2025 ConDelu Meals</p>
 </div>
 
 </body>
