--- a/src/main/resources/static/styles/header.scss
+++ b/src/main/resources/static/styles/header.scss
@@ -10,6 +10,24 @@
     color: $accent;
     font-size: 1.75em;
   }
+  #branding-desktop {
+    display: block;
+  }
+  #branding-mobile {
+    color: $accent;
+    fill: $accent;
+    font-size: 1.75em;
+    z-index: 9999;
+    display: none;
+  }
+  @media (width <= 375px) {
+    #branding-mobile {
+      display: block;
+    }
+    #branding-desktop {
+      display: none;
+    }
+  }
 }
 
 #header-container {
@@ -88,4 +106,32 @@
       z-index: 9999;
     }
   }
+  @media (width <= 500px) {
+    #header-link-container {
+      gap: 2vw;
+    }
+    #header-account-icon {
+      padding-left: 2vw;
+    }
+  }
+}
+
+#mobile-header-popup {
+  display: none; //flex
+  flex-flow: column;
+  align-items: center;
+  gap: 5vh;
+
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+
+  width: 100%;
+  height: 100%;
+  padding-top: 15vh;
+
+  background: transparentize(darken($secondary, 2%), 0.01);
 }
