--- a/src/main/resources/templates/signon.html
+++ b/src/main/resources/templates/signon.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://kit.fontawesome.com/2b6129ab2e.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles/signon.css">
+    <script src="/js/header.js"></script>
     <script src="/js/signon.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 </head>
@@ -16,7 +17,11 @@
 
 <div id="header-container">
     <div id="header-link-container">
+        <a href="/" style="display: none;">Home</a>
         <a href="/menu" style="display: none;">Menu</a>
+        <a href="/cart" style="display: none;">Order</a>
+        <a href="/account" style="display: none;">Account</a>
+        <a href="/#collaborate-container" style="display: none;">Careers</a>
         <button id="header-show-button" data-headeropen="false" onclick="headerButtonClick()"><i class="fa-solid fa-bars"></i></button>
         <a class="header-no-remove" href="/cart">
             <i class="fa-solid fa-cart-shopping"></i>
@@ -31,7 +36,16 @@
 </div>
 
 <div id="branding-container">
-    <a href="/"><h1>Condelu Meals</h1></a>
+    <a href="/" id="branding-desktop"><h1>Condelu Meals</h1></a>
+    <a href="/" id="branding-mobile"><i class="fa-solid fa-house"></i></a>
+</div>
+
+<div id="mobile-header-popup">
+    <a href="/"><h1>Home</h1></a>
+    <a href="/menu"><h1>Menu</h1></a>
+    <a href="/cart"><h1>Order</h1></a>
+    <a href="/account"><h1>Account</h1></a>
+    <a href="/#collaborate-container"><h1>Careers</h1></a>
 </div>
 
 
