--- a/src/main/resources/static/styles/home/approaches-container.scss
+++ b/src/main/resources/static/styles/home/approaches-container.scss
@@ -28,6 +28,7 @@
     width: 100%;
     text-align: center;
     word-wrap: break-word;
+    cursor: pointer;
 
     .approaches-tile-heading {
       font-size: 2em;
