--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -59,6 +59,7 @@ a {
   text-decoration: none;
   margin: 0;
   color: #00B837;
+  cursor: pointer;
 }
 
 a.link-hover {
@@ -98,6 +99,7 @@ button {
   border-radius: 0.5em;
   will-change: background, color;
   transition: background 0.5s, color 0.5s;
+  cursor: pointer;
 }
 
 button:hover, button:focus {
@@ -611,6 +613,7 @@ body {
   width: 100%;
   text-align: center;
   word-wrap: break-word;
+  cursor: pointer;
 }
 #site-content #approaches-container .approaches-tile .approaches-tile-heading {
   font-size: 2em;
